mp1/src/cool.output
Terminals unused in grammar

   ERROR


State 133 conflicts: 9 shift/reduce
State 169 conflicts: 9 shift/reduce


Grammar

    0 $accept: program $end

    1 program: class_list

    2 class_list: class
    3           | class_list class
    4           | error ';'
    5           | class_list error ';'

    6 class: CLASS TYPEID '{' feature_list '}' ';'
    7      | CLASS TYPEID INHERITS TYPEID '{' feature_list '}' ';'
    8      | CLASS error '{' feature_list '}' ';'
    9      | CLASS error '{' error '}' ';'
   10      | CLASS TYPEID '{' error '}' ';'
   11      | CLASS TYPEID INHERITS TYPEID '{' error '}' ';'

   12 feature_list: %empty
   13             | real_feature_list

   14 real_feature_list: real_feature_list feature ';'
   15                  | feature ';'
   16                  | real_feature_list error ';'
   17                  | error ';'

   18 feature: OBJECTID '(' formal_list ')' ':' TYPEID '{' expr '}'
   19        | OBJECTID ':' TYPEID
   20        | OBJECTID ':' TYPEID ASSIGN expr

   21 formal_list: %empty
   22            | formal
   23            | formal_list ',' formal
   24            | formal_list ',' error

   25 formal: OBJECTID ':' TYPEID

   26 para_list: %empty
   27          | expr
   28          | para_list ',' expr

   29 exprs_with_semicolon: expr ';'
   30                     | exprs_with_semicolon expr ';'
   31                     | error ';'
   32                     | exprs_with_semicolon error ';'

   33 assign_expr: %empty
   34            | ASSIGN expr

   35 let_exprs: OBJECTID ':' TYPEID assign_expr IN expr
   36          | OBJECTID ':' TYPEID assign_expr ',' let_exprs
   37          | error IN expr
   38          | error ',' let_exprs

   39 case_exprs: case_single_expr
   40           | case_exprs case_single_expr
   41           | case_exprs error ';'
   42           | error ';'

   43 case_single_expr: OBJECTID ':' TYPEID DARROW expr ';'

   44 expr: OBJECTID ASSIGN expr
   45     | expr '.' OBJECTID '(' para_list ')'
   46     | expr '@' TYPEID '.' OBJECTID '(' para_list ')'
   47     | OBJECTID '(' para_list ')'
   48     | IF expr THEN expr ELSE expr FI
   49     | IF error FI
   50     | WHILE expr LOOP expr POOL
   51     | WHILE error POOL
   52     | '{' exprs_with_semicolon '}'
   53     | LET let_exprs
   54     | CASE expr OF case_exprs ESAC
   55     | NEW TYPEID
   56     | ISVOID expr
   57     | expr '+' expr
   58     | expr '-' expr
   59     | expr '*' expr
   60     | expr '/' expr
   61     | '~' expr
   62     | expr '<' expr
   63     | expr LE expr
   64     | expr '=' expr
   65     | NOT expr
   66     | '(' expr ')'
   67     | '(' error ')'
   68     | OBJECTID
   69     | INT_CONST
   70     | STR_CONST
   71     | BOOL_CONST


Terminals, with rules where they appear

$end (0) 0
'(' (40) 18 45 46 47 66 67
')' (41) 18 45 46 47 66 67
'*' (42) 59
'+' (43) 57
',' (44) 23 24 28 36 38
'-' (45) 58
'.' (46) 45 46
'/' (47) 60
':' (58) 18 19 20 25 35 36 43
';' (59) 4 5 6 7 8 9 10 11 14 15 16 17 29 30 31 32 41 42 43
'<' (60) 62
'=' (61) 64
'@' (64) 46
'{' (123) 6 7 8 9 10 11 18 52
'}' (125) 6 7 8 9 10 11 18 52
'~' (126) 61
error (256) 4 5 8 9 10 11 16 17 24 31 32 37 38 41 42 49 51 67
CLASS (258) 6 7 8 9 10 11
ELSE (259) 48
FI (260) 48 49
IF (261) 48 49
IN (262) 35 37
INHERITS (263) 7 11
LET (264) 53
LOOP (265) 50
POOL (266) 50 51
THEN (267) 48
WHILE (268) 50 51
CASE (269) 54
ESAC (270) 54
OF (271) 54
DARROW (272) 43
NEW (273) 55
ISVOID (274) 56
STR_CONST (275) 70
INT_CONST (276) 69
BOOL_CONST (277) 71
TYPEID (278) 6 7 10 11 18 19 20 25 35 36 43 46 55
OBJECTID (279) 18 19 20 25 35 36 43 44 45 46 47 68
ASSIGN (280) 20 34 44
NOT (281) 65
LE (282) 63
ERROR (283)


Nonterminals, with rules where they appear

$accept (45)
    on left: 0
program (46)
    on left: 1, on right: 0
class_list (47)
    on left: 2 3 4 5, on right: 1 3 5
class (48)
    on left: 6 7 8 9 10 11, on right: 2 3
feature_list (49)
    on left: 12 13, on right: 6 7 8
real_feature_list (50)
    on left: 14 15 16 17, on right: 13 14 16
feature (51)
    on left: 18 19 20, on right: 14 15
formal_list (52)
    on left: 21 22 23 24, on right: 18 23 24
formal (53)
    on left: 25, on right: 22 23
para_list (54)
    on left: 26 27 28, on right: 28 45 46 47
exprs_with_semicolon (55)
    on left: 29 30 31 32, on right: 30 32 52
assign_expr (56)
    on left: 33 34, on right: 35 36
let_exprs (57)
    on left: 35 36 37 38, on right: 36 38 53
case_exprs (58)
    on left: 39 40 41 42, on right: 40 41 54
case_single_expr (59)
    on left: 43, on right: 39 40
expr (60)
    on left: 44 45 46 47 48 49 50 51 52 53 54 55 56 57 58 59 60 61
    62 63 64 65 66 67 68 69 70 71, on right: 18 20 27 28 29 30 34 35
    37 43 44 45 46 48 50 54 56 57 58 59 60 61 62 63 64 65 66


State 0

    0 $accept: . program $end

    error  shift, and go to state 1
    CLASS  shift, and go to state 2

    program     go to state 3
    class_list  go to state 4
    class       go to state 5


State 1

    4 class_list: error . ';'

    ';'  shift, and go to state 6


State 2

    6 class: CLASS . TYPEID '{' feature_list '}' ';'
    7      | CLASS . TYPEID INHERITS TYPEID '{' feature_list '}' ';'
    8      | CLASS . error '{' feature_list '}' ';'
    9      | CLASS . error '{' error '}' ';'
   10      | CLASS . TYPEID '{' error '}' ';'
   11      | CLASS . TYPEID INHERITS TYPEID '{' error '}' ';'

    error   shift, and go to state 7
    TYPEID  shift, and go to state 8


State 3

    0 $accept: program . $end

    $end  shift, and go to state 9


State 4

    1 program: class_list .
    3 class_list: class_list . class
    5           | class_list . error ';'

    error  shift, and go to state 10
    CLASS  shift, and go to state 2

    $end  reduce using rule 1 (program)

    class  go to state 11


State 5

    2 class_list: class .

    $default  reduce using rule 2 (class_list)


State 6

    4 class_list: error ';' .

    $default  reduce using rule 4 (class_list)


State 7

    8 class: CLASS error . '{' feature_list '}' ';'
    9      | CLASS error . '{' error '}' ';'

    '{'  shift, and go to state 12


State 8

    6 class: CLASS TYPEID . '{' feature_list '}' ';'
    7      | CLASS TYPEID . INHERITS TYPEID '{' feature_list '}' ';'
   10      | CLASS TYPEID . '{' error '}' ';'
   11      | CLASS TYPEID . INHERITS TYPEID '{' error '}' ';'

    INHERITS  shift, and go to state 13
    '{'       shift, and go to state 14


State 9

    0 $accept: program $end .

    $default  accept


State 10

    5 class_list: class_list error . ';'

    ';'  shift, and go to state 15


State 11

    3 class_list: class_list class .

    $default  reduce using rule 3 (class_list)


State 12

    8 class: CLASS error '{' . feature_list '}' ';'
    9      | CLASS error '{' . error '}' ';'

    error     shift, and go to state 16
    OBJECTID  shift, and go to state 17

    '}'  reduce using rule 12 (feature_list)

    feature_list       go to state 18
    real_feature_list  go to state 19
    feature            go to state 20


State 13

    7 class: CLASS TYPEID INHERITS . TYPEID '{' feature_list '}' ';'
   11      | CLASS TYPEID INHERITS . TYPEID '{' error '}' ';'

    TYPEID  shift, and go to state 21


State 14

    6 class: CLASS TYPEID '{' . feature_list '}' ';'
   10      | CLASS TYPEID '{' . error '}' ';'

    error     shift, and go to state 22
    OBJECTID  shift, and go to state 17

    '}'  reduce using rule 12 (feature_list)

    feature_list       go to state 23
    real_feature_list  go to state 19
    feature            go to state 20


State 15

    5 class_list: class_list error ';' .

    $default  reduce using rule 5 (class_list)


State 16

    9 class: CLASS error '{' error . '}' ';'
   17 real_feature_list: error . ';'

    ';'  shift, and go to state 24
    '}'  shift, and go to state 25


State 17

   18 feature: OBJECTID . '(' formal_list ')' ':' TYPEID '{' expr '}'
   19        | OBJECTID . ':' TYPEID
   20        | OBJECTID . ':' TYPEID ASSIGN expr

    '('  shift, and go to state 26
    ':'  shift, and go to state 27


State 18

    8 class: CLASS error '{' feature_list . '}' ';'

    '}'  shift, and go to state 28


State 19

   13 feature_list: real_feature_list .
   14 real_feature_list: real_feature_list . feature ';'
   16                  | real_feature_list . error ';'

    error     shift, and go to state 29
    OBJECTID  shift, and go to state 17

    '}'  reduce using rule 13 (feature_list)

    feature  go to state 30


State 20

   15 real_feature_list: feature . ';'

    ';'  shift, and go to state 31


State 21

    7 class: CLASS TYPEID INHERITS TYPEID . '{' feature_list '}' ';'
   11      | CLASS TYPEID INHERITS TYPEID . '{' error '}' ';'

    '{'  shift, and go to state 32


State 22

   10 class: CLASS TYPEID '{' error . '}' ';'
   17 real_feature_list: error . ';'

    ';'  shift, and go to state 24
    '}'  shift, and go to state 33


State 23

    6 class: CLASS TYPEID '{' feature_list . '}' ';'

    '}'  shift, and go to state 34


State 24

   17 real_feature_list: error ';' .

    $default  reduce using rule 17 (real_feature_list)


State 25

    9 class: CLASS error '{' error '}' . ';'

    ';'  shift, and go to state 35


State 26

   18 feature: OBJECTID '(' . formal_list ')' ':' TYPEID '{' expr '}'

    OBJECTID  shift, and go to state 36

    $default  reduce using rule 21 (formal_list)

    formal_list  go to state 37
    formal       go to state 38


State 27

   19 feature: OBJECTID ':' . TYPEID
   20        | OBJECTID ':' . TYPEID ASSIGN expr

    TYPEID  shift, and go to state 39


State 28

    8 class: CLASS error '{' feature_list '}' . ';'

    ';'  shift, and go to state 40


State 29

   16 real_feature_list: real_feature_list error . ';'

    ';'  shift, and go to state 41


State 30

   14 real_feature_list: real_feature_list feature . ';'

    ';'  shift, and go to state 42


State 31

   15 real_feature_list: feature ';' .

    $default  reduce using rule 15 (real_feature_list)


State 32

    7 class: CLASS TYPEID INHERITS TYPEID '{' . feature_list '}' ';'
   11      | CLASS TYPEID INHERITS TYPEID '{' . error '}' ';'

    error     shift, and go to state 43
    OBJECTID  shift, and go to state 17

    '}'  reduce using rule 12 (feature_list)

    feature_list       go to state 44
    real_feature_list  go to state 19
    feature            go to state 20


State 33

   10 class: CLASS TYPEID '{' error '}' . ';'

    ';'  shift, and go to state 45


State 34

    6 class: CLASS TYPEID '{' feature_list '}' . ';'

    ';'  shift, and go to state 46


State 35

    9 class: CLASS error '{' error '}' ';' .

    $default  reduce using rule 9 (class)


State 36

   25 formal: OBJECTID . ':' TYPEID

    ':'  shift, and go to state 47


State 37

   18 feature: OBJECTID '(' formal_list . ')' ':' TYPEID '{' expr '}'
   23 formal_list: formal_list . ',' formal
   24            | formal_list . ',' error

    ')'  shift, and go to state 48
    ','  shift, and go to state 49


State 38

   22 formal_list: formal .

    $default  reduce using rule 22 (formal_list)


State 39

   19 feature: OBJECTID ':' TYPEID .
   20        | OBJECTID ':' TYPEID . ASSIGN expr

    ASSIGN  shift, and go to state 50

    $default  reduce using rule 19 (feature)


State 40

    8 class: CLASS error '{' feature_list '}' ';' .

    $default  reduce using rule 8 (class)


State 41

   16 real_feature_list: real_feature_list error ';' .

    $default  reduce using rule 16 (real_feature_list)


State 42

   14 real_feature_list: real_feature_list feature ';' .

    $default  reduce using rule 14 (real_feature_list)


State 43

   11 class: CLASS TYPEID INHERITS TYPEID '{' error . '}' ';'
   17 real_feature_list: error . ';'

    ';'  shift, and go to state 24
    '}'  shift, and go to state 51


State 44

    7 class: CLASS TYPEID INHERITS TYPEID '{' feature_list . '}' ';'

    '}'  shift, and go to state 52


State 45

   10 class: CLASS TYPEID '{' error '}' ';' .

    $default  reduce using rule 10 (class)


State 46

    6 class: CLASS TYPEID '{' feature_list '}' ';' .

    $default  reduce using rule 6 (class)


State 47

   25 formal: OBJECTID ':' . TYPEID

    TYPEID  shift, and go to state 53


State 48

   18 feature: OBJECTID '(' formal_list ')' . ':' TYPEID '{' expr '}'

    ':'  shift, and go to state 54


State 49

   23 formal_list: formal_list ',' . formal
   24            | formal_list ',' . error

    error     shift, and go to state 55
    OBJECTID  shift, and go to state 36

    formal  go to state 56


State 50

   20 feature: OBJECTID ':' TYPEID ASSIGN . expr

    IF          shift, and go to state 57
    LET         shift, and go to state 58
    WHILE       shift, and go to state 59
    CASE        shift, and go to state 60
    NEW         shift, and go to state 61
    ISVOID      shift, and go to state 62
    STR_CONST   shift, and go to state 63
    INT_CONST   shift, and go to state 64
    BOOL_CONST  shift, and go to state 65
    OBJECTID    shift, and go to state 66
    NOT         shift, and go to state 67
    '~'         shift, and go to state 68
    '{'         shift, and go to state 69
    '('         shift, and go to state 70

    expr  go to state 71


State 51

   11 class: CLASS TYPEID INHERITS TYPEID '{' error '}' . ';'

    ';'  shift, and go to state 72


State 52

    7 class: CLASS TYPEID INHERITS TYPEID '{' feature_list '}' . ';'

    ';'  shift, and go to state 73


State 53

   25 formal: OBJECTID ':' TYPEID .

    $default  reduce using rule 25 (formal)


State 54

   18 feature: OBJECTID '(' formal_list ')' ':' . TYPEID '{' expr '}'

    TYPEID  shift, and go to state 74


State 55

   24 formal_list: formal_list ',' error .

    $default  reduce using rule 24 (formal_list)


State 56

   23 formal_list: formal_list ',' formal .

    $default  reduce using rule 23 (formal_list)


State 57

   48 expr: IF . expr THEN expr ELSE expr FI
   49     | IF . error FI

    error       shift, and go to state 75
    IF          shift, and go to state 57
    LET         shift, and go to state 58
    WHILE       shift, and go to state 59
    CASE        shift, and go to state 60
    NEW         shift, and go to state 61
    ISVOID      shift, and go to state 62
    STR_CONST   shift, and go to state 63
    INT_CONST   shift, and go to state 64
    BOOL_CONST  shift, and go to state 65
    OBJECTID    shift, and go to state 66
    NOT         shift, and go to state 67
    '~'         shift, and go to state 68
    '{'         shift, and go to state 69
    '('         shift, and go to state 70

    expr  go to state 76


State 58

   53 expr: LET . let_exprs

    error     shift, and go to state 77
    OBJECTID  shift, and go to state 78

    let_exprs  go to state 79


State 59

   50 expr: WHILE . expr LOOP expr POOL
   51     | WHILE . error POOL

    error       shift, and go to state 80
    IF          shift, and go to state 57
    LET         shift, and go to state 58
    WHILE       shift, and go to state 59
    CASE        shift, and go to state 60
    NEW         shift, and go to state 61
    ISVOID      shift, and go to state 62
    STR_CONST   shift, and go to state 63
    INT_CONST   shift, and go to state 64
    BOOL_CONST  shift, and go to state 65
    OBJECTID    shift, and go to state 66
    NOT         shift, and go to state 67
    '~'         shift, and go to state 68
    '{'         shift, and go to state 69
    '('         shift, and go to state 70

    expr  go to state 81


State 60

   54 expr: CASE . expr OF case_exprs ESAC

    IF          shift, and go to state 57
    LET         shift, and go to state 58
    WHILE       shift, and go to state 59
    CASE        shift, and go to state 60
    NEW         shift, and go to state 61
    ISVOID      shift, and go to state 62
    STR_CONST   shift, and go to state 63
    INT_CONST   shift, and go to state 64
    BOOL_CONST  shift, and go to state 65
    OBJECTID    shift, and go to state 66
    NOT         shift, and go to state 67
    '~'         shift, and go to state 68
    '{'         shift, and go to state 69
    '('         shift, and go to state 70

    expr  go to state 82


State 61

   55 expr: NEW . TYPEID

    TYPEID  shift, and go to state 83


State 62

   56 expr: ISVOID . expr

    IF          shift, and go to state 57
    LET         shift, and go to state 58
    WHILE       shift, and go to state 59
    CASE        shift, and go to state 60
    NEW         shift, and go to state 61
    ISVOID      shift, and go to state 62
    STR_CONST   shift, and go to state 63
    INT_CONST   shift, and go to state 64
    BOOL_CONST  shift, and go to state 65
    OBJECTID    shift, and go to state 66
    NOT         shift, and go to state 67
    '~'         shift, and go to state 68
    '{'         shift, and go to state 69
    '('         shift, and go to state 70

    expr  go to state 84


State 63

   70 expr: STR_CONST .

    $default  reduce using rule 70 (expr)


State 64

   69 expr: INT_CONST .

    $default  reduce using rule 69 (expr)


State 65

   71 expr: BOOL_CONST .

    $default  reduce using rule 71 (expr)


State 66

   44 expr: OBJECTID . ASSIGN expr
   47     | OBJECTID . '(' para_list ')'
   68     | OBJECTID .

    ASSIGN  shift, and go to state 85
    '('     shift, and go to state 86

    $default  reduce using rule 68 (expr)


State 67

   65 expr: NOT . expr

    IF          shift, and go to state 57
    LET         shift, and go to state 58
    WHILE       shift, and go to state 59
    CASE        shift, and go to state 60
    NEW         shift, and go to state 61
    ISVOID      shift, and go to state 62
    STR_CONST   shift, and go to state 63
    INT_CONST   shift, and go to state 64
    BOOL_CONST  shift, and go to state 65
    OBJECTID    shift, and go to state 66
    NOT         shift, and go to state 67
    '~'         shift, and go to state 68
    '{'         shift, and go to state 69
    '('         shift, and go to state 70

    expr  go to state 87


State 68

   61 expr: '~' . expr

    IF          shift, and go to state 57
    LET         shift, and go to state 58
    WHILE       shift, and go to state 59
    CASE        shift, and go to state 60
    NEW         shift, and go to state 61
    ISVOID      shift, and go to state 62
    STR_CONST   shift, and go to state 63
    INT_CONST   shift, and go to state 64
    BOOL_CONST  shift, and go to state 65
    OBJECTID    shift, and go to state 66
    NOT         shift, and go to state 67
    '~'         shift, and go to state 68
    '{'         shift, and go to state 69
    '('         shift, and go to state 70

    expr  go to state 88


State 69

   52 expr: '{' . exprs_with_semicolon '}'

    error       shift, and go to state 89
    IF          shift, and go to state 57
    LET         shift, and go to state 58
    WHILE       shift, and go to state 59
    CASE        shift, and go to state 60
    NEW         shift, and go to state 61
    ISVOID      shift, and go to state 62
    STR_CONST   shift, and go to state 63
    INT_CONST   shift, and go to state 64
    BOOL_CONST  shift, and go to state 65
    OBJECTID    shift, and go to state 66
    NOT         shift, and go to state 67
    '~'         shift, and go to state 68
    '{'         shift, and go to state 69
    '('         shift, and go to state 70

    exprs_with_semicolon  go to state 90
    expr                  go to state 91


State 70

   66 expr: '(' . expr ')'
   67     | '(' . error ')'

    error       shift, and go to state 92
    IF          shift, and go to state 57
    LET         shift, and go to state 58
    WHILE       shift, and go to state 59
    CASE        shift, and go to state 60
    NEW         shift, and go to state 61
    ISVOID      shift, and go to state 62
    STR_CONST   shift, and go to state 63
    INT_CONST   shift, and go to state 64
    BOOL_CONST  shift, and go to state 65
    OBJECTID    shift, and go to state 66
    NOT         shift, and go to state 67
    '~'         shift, and go to state 68
    '{'         shift, and go to state 69
    '('         shift, and go to state 70

    expr  go to state 93


State 71

   20 feature: OBJECTID ':' TYPEID ASSIGN expr .
   45 expr: expr . '.' OBJECTID '(' para_list ')'
   46     | expr . '@' TYPEID '.' OBJECTID '(' para_list ')'
   57     | expr . '+' expr
   58     | expr . '-' expr
   59     | expr . '*' expr
   60     | expr . '/' expr
   62     | expr . '<' expr
   63     | expr . LE expr
   64     | expr . '=' expr

    LE   shift, and go to state 94
    '<'  shift, and go to state 95
    '='  shift, and go to state 96
    '+'  shift, and go to state 97
    '-'  shift, and go to state 98
    '*'  shift, and go to state 99
    '/'  shift, and go to state 100
    '@'  shift, and go to state 101
    '.'  shift, and go to state 102

    $default  reduce using rule 20 (feature)


State 72

   11 class: CLASS TYPEID INHERITS TYPEID '{' error '}' ';' .

    $default  reduce using rule 11 (class)


State 73

    7 class: CLASS TYPEID INHERITS TYPEID '{' feature_list '}' ';' .

    $default  reduce using rule 7 (class)


State 74

   18 feature: OBJECTID '(' formal_list ')' ':' TYPEID . '{' expr '}'

    '{'  shift, and go to state 103


State 75

   49 expr: IF error . FI

    FI  shift, and go to state 104


State 76

   45 expr: expr . '.' OBJECTID '(' para_list ')'
   46     | expr . '@' TYPEID '.' OBJECTID '(' para_list ')'
   48     | IF expr . THEN expr ELSE expr FI
   57     | expr . '+' expr
   58     | expr . '-' expr
   59     | expr . '*' expr
   60     | expr . '/' expr
   62     | expr . '<' expr
   63     | expr . LE expr
   64     | expr . '=' expr

    THEN  shift, and go to state 105
    LE    shift, and go to state 94
    '<'   shift, and go to state 95
    '='   shift, and go to state 96
    '+'   shift, and go to state 97
    '-'   shift, and go to state 98
    '*'   shift, and go to state 99
    '/'   shift, and go to state 100
    '@'   shift, and go to state 101
    '.'   shift, and go to state 102


State 77

   37 let_exprs: error . IN expr
   38          | error . ',' let_exprs

    IN   shift, and go to state 106
    ','  shift, and go to state 107


State 78

   35 let_exprs: OBJECTID . ':' TYPEID assign_expr IN expr
   36          | OBJECTID . ':' TYPEID assign_expr ',' let_exprs

    ':'  shift, and go to state 108


State 79

   53 expr: LET let_exprs .

    $default  reduce using rule 53 (expr)


State 80

   51 expr: WHILE error . POOL

    POOL  shift, and go to state 109


State 81

   45 expr: expr . '.' OBJECTID '(' para_list ')'
   46     | expr . '@' TYPEID '.' OBJECTID '(' para_list ')'
   50     | WHILE expr . LOOP expr POOL
   57     | expr . '+' expr
   58     | expr . '-' expr
   59     | expr . '*' expr
   60     | expr . '/' expr
   62     | expr . '<' expr
   63     | expr . LE expr
   64     | expr . '=' expr

    LOOP  shift, and go to state 110
    LE    shift, and go to state 94
    '<'   shift, and go to state 95
    '='   shift, and go to state 96
    '+'   shift, and go to state 97
    '-'   shift, and go to state 98
    '*'   shift, and go to state 99
    '/'   shift, and go to state 100
    '@'   shift, and go to state 101
    '.'   shift, and go to state 102


State 82

   45 expr: expr . '.' OBJECTID '(' para_list ')'
   46     | expr . '@' TYPEID '.' OBJECTID '(' para_list ')'
   54     | CASE expr . OF case_exprs ESAC
   57     | expr . '+' expr
   58     | expr . '-' expr
   59     | expr . '*' expr
   60     | expr . '/' expr
   62     | expr . '<' expr
   63     | expr . LE expr
   64     | expr . '=' expr
